// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventHelper adapter adapt events match snapshots 1`] = `
Object {
  "attendees": Array [
    Object {
      "mail": "test@webmail-test.loc",
      "name": "test",
    },
  ],
  "counter": undefined,
  "date": "vendredi 14 août 2020",
  "mailboxOwner": "B2CBEEFD-147C-451A-9229-1B6C9697D202",
  "organizer": Object {
    "mail": "jdoe@webmail-test.loc",
    "name": "john doe",
  },
  "recuridIsoDate": undefined,
  "sanitizedDescription": undefined,
  "serverEvent": Object {
    "created": 1597336484841,
    "createdBy": "system",
    "displayName": "all day event",
    "externalId": null,
    "flags": Array [
      "Seen",
    ],
    "internalId": 5276,
    "uid": "191319a5-07b8-40bc-80b4-aeae35951029",
    "updated": 1597336484841,
    "updatedBy": "system",
    "value": Object {
      "icsUid": "191319a5-07b8-40bc-80b4-aeae35951029",
      "main": Object {
        "alarm": Array [
          Object {
            "action": "Display",
            "description": null,
            "duration": null,
            "repeat": null,
            "summary": null,
            "trigger": -25200,
          },
        ],
        "attachments": Array [],
        "attendees": Array [
          Object {
            "commonName": "test",
            "cutype": "Individual",
            "delFrom": null,
            "delTo": null,
            "dir": "bm://webmail-test.loc/users/B2CBEEFD-147C-451A-9229-1B6C9697D202",
            "internal": true,
            "lang": null,
            "mailto": "test@webmail-test.loc",
            "member": null,
            "partStatus": "NeedsAction",
            "responseComment": null,
            "role": "RequiredParticipant",
            "rsvp": true,
            "sentBy": null,
            "uri": null,
          },
        ],
        "categories": Array [],
        "classification": "Public",
        "description": null,
        "draft": false,
        "dtend": Object {
          "iso8601": "2020-08-15",
          "precision": "Date",
          "timezone": null,
        },
        "dtstart": Object {
          "iso8601": "2020-08-14",
          "precision": "Date",
          "timezone": null,
        },
        "exdate": null,
        "location": null,
        "organizer": Object {
          "commonName": "john doe",
          "dir": "bm://webmail-test.loc/users/6926E3AD-6CA1-4147-875F-85F080E64AFA",
          "mailto": "jdoe@webmail-test.loc",
          "uri": null,
        },
        "priority": 5,
        "rdate": null,
        "rrule": null,
        "sequence": 0,
        "status": "Confirmed",
        "summary": "all day event",
        "transparency": "Transparent",
        "url": null,
      },
      "occurrences": Array [],
      "properties": Object {},
    },
    "version": 27,
  },
  "status": "NeedsAction",
  "summary": "all day event",
  "uid": "191319a5-07b8-40bc-80b4-aeae35951029",
}
`;

exports[`EventHelper adapter adapt events match snapshots 2`] = `
Object {
  "attendees": Array [
    Object {
      "mail": "test@webmail-test.loc",
      "name": "test",
    },
  ],
  "counter": undefined,
  "date": "vendredi 14 août 2020 de 10:00 à 11:00",
  "mailboxOwner": "B2CBEEFD-147C-451A-9229-1B6C9697D202",
  "organizer": Object {
    "mail": "jdoe@webmail-test.loc",
    "name": "john doe",
  },
  "recuridIsoDate": undefined,
  "sanitizedDescription": undefined,
  "serverEvent": Object {
    "created": 1597336498670,
    "createdBy": "system",
    "displayName": "one day, one hour",
    "externalId": null,
    "flags": Array [
      "Seen",
    ],
    "internalId": 5280,
    "uid": "0f96bbc1-6c50-42ff-b030-8256df315451",
    "updated": 1597336498670,
    "updatedBy": "system",
    "value": Object {
      "icsUid": "0f96bbc1-6c50-42ff-b030-8256df315451",
      "main": Object {
        "alarm": Array [
          Object {
            "action": "Display",
            "description": null,
            "duration": null,
            "repeat": null,
            "summary": null,
            "trigger": -900,
          },
        ],
        "attachments": Array [],
        "attendees": Array [
          Object {
            "commonName": "test",
            "cutype": "Individual",
            "delFrom": null,
            "delTo": null,
            "dir": "bm://webmail-test.loc/users/B2CBEEFD-147C-451A-9229-1B6C9697D202",
            "internal": true,
            "lang": null,
            "mailto": "test@webmail-test.loc",
            "member": null,
            "partStatus": "NeedsAction",
            "responseComment": null,
            "role": "RequiredParticipant",
            "rsvp": true,
            "sentBy": null,
            "uri": null,
          },
        ],
        "categories": Array [],
        "classification": "Public",
        "description": null,
        "draft": false,
        "dtend": Object {
          "iso8601": "2020-08-14T13:00:00.000+02:00",
          "precision": "DateTime",
          "timezone": "Europe/Paris",
        },
        "dtstart": Object {
          "iso8601": "2020-08-14T12:00:00.000+02:00",
          "precision": "DateTime",
          "timezone": "Europe/Paris",
        },
        "exdate": null,
        "location": null,
        "organizer": Object {
          "commonName": "john doe",
          "dir": "bm://webmail-test.loc/users/6926E3AD-6CA1-4147-875F-85F080E64AFA",
          "mailto": "jdoe@webmail-test.loc",
          "uri": null,
        },
        "priority": 5,
        "rdate": null,
        "rrule": null,
        "sequence": 0,
        "status": "Confirmed",
        "summary": "one day, one hour",
        "transparency": "Opaque",
        "url": null,
      },
      "occurrences": Array [],
      "properties": Object {},
    },
    "version": 28,
  },
  "status": "NeedsAction",
  "summary": "one day, one hour",
  "uid": "0f96bbc1-6c50-42ff-b030-8256df315451",
}
`;

exports[`EventHelper adapter adapt events match snapshots 3`] = `
Object {
  "attendees": Array [
    Object {
      "mail": "test@webmail-test.loc",
      "name": "test",
    },
  ],
  "counter": undefined,
  "date": "Tous les jours, de 10:00 à 11:30, à partir du 17 août 2020",
  "mailboxOwner": "B2CBEEFD-147C-451A-9229-1B6C9697D202",
  "organizer": Object {
    "mail": "jdoe@webmail-test.loc",
    "name": "john doe",
  },
  "recuridIsoDate": undefined,
  "sanitizedDescription": undefined,
  "serverEvent": Object {
    "created": 1597336529234,
    "createdBy": "system",
    "displayName": "recurrent : every day with an hour",
    "externalId": null,
    "flags": Array [
      "Seen",
    ],
    "internalId": 5285,
    "uid": "69bc4819-b9b6-41ce-bc77-3b648974e953",
    "updated": 1597336529234,
    "updatedBy": "system",
    "value": Object {
      "icsUid": "69bc4819-b9b6-41ce-bc77-3b648974e953",
      "main": Object {
        "alarm": Array [
          Object {
            "action": "Display",
            "description": null,
            "duration": null,
            "repeat": null,
            "summary": null,
            "trigger": -900,
          },
        ],
        "attachments": Array [],
        "attendees": Array [
          Object {
            "commonName": "test",
            "cutype": "Individual",
            "delFrom": null,
            "delTo": null,
            "dir": "bm://webmail-test.loc/users/B2CBEEFD-147C-451A-9229-1B6C9697D202",
            "internal": true,
            "lang": null,
            "mailto": "test@webmail-test.loc",
            "member": null,
            "partStatus": "NeedsAction",
            "responseComment": null,
            "role": "RequiredParticipant",
            "rsvp": true,
            "sentBy": null,
            "uri": null,
          },
        ],
        "categories": Array [],
        "classification": "Public",
        "description": null,
        "draft": false,
        "dtend": Object {
          "iso8601": "2020-08-17T13:30:00.000+02:00",
          "precision": "DateTime",
          "timezone": "Europe/Paris",
        },
        "dtstart": Object {
          "iso8601": "2020-08-17T12:00:00.000+02:00",
          "precision": "DateTime",
          "timezone": "Europe/Paris",
        },
        "exdate": null,
        "location": null,
        "organizer": Object {
          "commonName": "john doe",
          "dir": "bm://webmail-test.loc/users/6926E3AD-6CA1-4147-875F-85F080E64AFA",
          "mailto": "jdoe@webmail-test.loc",
          "uri": null,
        },
        "priority": 5,
        "rdate": null,
        "rrule": Object {
          "byDay": Array [],
          "byHour": Array [],
          "byMinute": Array [],
          "byMonth": Array [],
          "byMonthDay": Array [],
          "bySecond": Array [],
          "byWeekNo": Array [],
          "byYearDay": Array [],
          "count": null,
          "frequency": "DAILY",
          "interval": 1,
          "until": null,
        },
        "sequence": 0,
        "status": "Confirmed",
        "summary": "recurrent : every day with an hour",
        "transparency": "Opaque",
        "url": null,
      },
      "occurrences": Array [],
      "properties": Object {},
    },
    "version": 29,
  },
  "status": "NeedsAction",
  "summary": "recurrent : every day with an hour",
  "uid": "69bc4819-b9b6-41ce-bc77-3b648974e953",
}
`;

exports[`EventHelper adapter adapt events match snapshots 4`] = `
Object {
  "attendees": Array [
    Object {
      "mail": "test@webmail-test.loc",
      "name": "test",
    },
  ],
  "counter": undefined,
  "date": "Toutes les semaines,  le vendredi, de 07:00 à 08:00, à partir du 21 août 2020",
  "mailboxOwner": "B2CBEEFD-147C-451A-9229-1B6C9697D202",
  "organizer": Object {
    "mail": "jdoe@webmail-test.loc",
    "name": "john doe",
  },
  "recuridIsoDate": undefined,
  "sanitizedDescription": undefined,
  "serverEvent": Object {
    "created": 1597336586337,
    "createdBy": "system",
    "displayName": "once every week with hour",
    "externalId": null,
    "flags": Array [
      "Seen",
    ],
    "internalId": 5295,
    "uid": "fecf2e5a-9149-47ec-8768-6aaca6ffa62b",
    "updated": 1597336586337,
    "updatedBy": "system",
    "value": Object {
      "icsUid": "fecf2e5a-9149-47ec-8768-6aaca6ffa62b",
      "main": Object {
        "alarm": Array [
          Object {
            "action": "Display",
            "description": null,
            "duration": null,
            "repeat": null,
            "summary": null,
            "trigger": -900,
          },
        ],
        "attachments": Array [],
        "attendees": Array [
          Object {
            "commonName": "test",
            "cutype": "Individual",
            "delFrom": null,
            "delTo": null,
            "dir": "bm://webmail-test.loc/users/B2CBEEFD-147C-451A-9229-1B6C9697D202",
            "internal": true,
            "lang": null,
            "mailto": "test@webmail-test.loc",
            "member": null,
            "partStatus": "NeedsAction",
            "responseComment": null,
            "role": "RequiredParticipant",
            "rsvp": true,
            "sentBy": null,
            "uri": null,
          },
        ],
        "categories": Array [],
        "classification": "Public",
        "description": null,
        "draft": false,
        "dtend": Object {
          "iso8601": "2020-08-21T10:00:00.000+02:00",
          "precision": "DateTime",
          "timezone": "Europe/Paris",
        },
        "dtstart": Object {
          "iso8601": "2020-08-21T09:00:00.000+02:00",
          "precision": "DateTime",
          "timezone": "Europe/Paris",
        },
        "exdate": null,
        "location": null,
        "organizer": Object {
          "commonName": "john doe",
          "dir": "bm://webmail-test.loc/users/6926E3AD-6CA1-4147-875F-85F080E64AFA",
          "mailto": "jdoe@webmail-test.loc",
          "uri": null,
        },
        "priority": 5,
        "rdate": null,
        "rrule": Object {
          "byDay": Array [
            Object {
              "day": "FR",
              "offset": 0,
            },
          ],
          "byHour": Array [],
          "byMinute": Array [],
          "byMonth": Array [],
          "byMonthDay": Array [],
          "bySecond": Array [],
          "byWeekNo": Array [],
          "byYearDay": Array [],
          "count": null,
          "frequency": "WEEKLY",
          "interval": 1,
          "until": null,
        },
        "sequence": 0,
        "status": "Confirmed",
        "summary": "once every week with hour",
        "transparency": "Opaque",
        "url": null,
      },
      "occurrences": Array [],
      "properties": Object {},
    },
    "version": 31,
  },
  "status": "NeedsAction",
  "summary": "once every week with hour",
  "uid": "fecf2e5a-9149-47ec-8768-6aaca6ffa62b",
}
`;

exports[`EventHelper adapter adapt events match snapshots 5`] = `
Object {
  "attendees": Array [
    Object {
      "mail": "test@webmail-test.loc",
      "name": "test",
    },
  ],
  "counter": undefined,
  "date": "Toutes les semaines,  le mardi, à partir du 25 août 2020",
  "mailboxOwner": "B2CBEEFD-147C-451A-9229-1B6C9697D202",
  "organizer": Object {
    "mail": "jdoe@webmail-test.loc",
    "name": "john doe",
  },
  "recuridIsoDate": undefined,
  "sanitizedDescription": undefined,
  "serverEvent": Object {
    "created": 1597336616186,
    "createdBy": "system",
    "displayName": "once every week ALL_DAY",
    "externalId": null,
    "flags": Array [
      "Seen",
    ],
    "internalId": 5300,
    "uid": "05784243-a2d5-4973-866d-e6ba74b3d0a6",
    "updated": 1597336616186,
    "updatedBy": "system",
    "value": Object {
      "icsUid": "05784243-a2d5-4973-866d-e6ba74b3d0a6",
      "main": Object {
        "alarm": Array [
          Object {
            "action": "Display",
            "description": null,
            "duration": null,
            "repeat": null,
            "summary": null,
            "trigger": -25200,
          },
        ],
        "attachments": Array [],
        "attendees": Array [
          Object {
            "commonName": "test",
            "cutype": "Individual",
            "delFrom": null,
            "delTo": null,
            "dir": "bm://webmail-test.loc/users/B2CBEEFD-147C-451A-9229-1B6C9697D202",
            "internal": true,
            "lang": null,
            "mailto": "test@webmail-test.loc",
            "member": null,
            "partStatus": "NeedsAction",
            "responseComment": null,
            "role": "RequiredParticipant",
            "rsvp": true,
            "sentBy": null,
            "uri": null,
          },
        ],
        "categories": Array [],
        "classification": "Public",
        "description": null,
        "draft": false,
        "dtend": Object {
          "iso8601": "2020-08-26",
          "precision": "Date",
          "timezone": null,
        },
        "dtstart": Object {
          "iso8601": "2020-08-25",
          "precision": "Date",
          "timezone": null,
        },
        "exdate": null,
        "location": null,
        "organizer": Object {
          "commonName": "john doe",
          "dir": "bm://webmail-test.loc/users/6926E3AD-6CA1-4147-875F-85F080E64AFA",
          "mailto": "jdoe@webmail-test.loc",
          "uri": null,
        },
        "priority": 5,
        "rdate": null,
        "rrule": Object {
          "byDay": Array [
            Object {
              "day": "TU",
              "offset": 0,
            },
          ],
          "byHour": Array [],
          "byMinute": Array [],
          "byMonth": Array [],
          "byMonthDay": Array [],
          "bySecond": Array [],
          "byWeekNo": Array [],
          "byYearDay": Array [],
          "count": null,
          "frequency": "WEEKLY",
          "interval": 1,
          "until": null,
        },
        "sequence": 0,
        "status": "Confirmed",
        "summary": "once every week ALL_DAY",
        "transparency": "Opaque",
        "url": null,
      },
      "occurrences": Array [],
      "properties": Object {},
    },
    "version": 32,
  },
  "status": "NeedsAction",
  "summary": "once every week ALL_DAY",
  "uid": "05784243-a2d5-4973-866d-e6ba74b3d0a6",
}
`;

exports[`EventHelper adapter adapt events match snapshots 6`] = `
Object {
  "attendees": Array [
    Object {
      "mail": "test@webmail-test.loc",
      "name": "test",
    },
  ],
  "counter": undefined,
  "date": "Le 19 tous les 2 mois, de 07:00 à 07:30, à partir de août 2020",
  "mailboxOwner": "B2CBEEFD-147C-451A-9229-1B6C9697D202",
  "organizer": Object {
    "mail": "jdoe@webmail-test.loc",
    "name": "john doe",
  },
  "recuridIsoDate": undefined,
  "sanitizedDescription": undefined,
  "serverEvent": Object {
    "created": 1597336556578,
    "createdBy": "system",
    "displayName": "twice a month, with an hour",
    "externalId": null,
    "flags": Array [
      "Seen",
    ],
    "internalId": 5290,
    "uid": "41a4e2e2-8eef-449c-9631-812727514880",
    "updated": 1597336556578,
    "updatedBy": "system",
    "value": Object {
      "icsUid": "41a4e2e2-8eef-449c-9631-812727514880",
      "main": Object {
        "alarm": Array [
          Object {
            "action": "Display",
            "description": null,
            "duration": null,
            "repeat": null,
            "summary": null,
            "trigger": -900,
          },
        ],
        "attachments": Array [],
        "attendees": Array [
          Object {
            "commonName": "test",
            "cutype": "Individual",
            "delFrom": null,
            "delTo": null,
            "dir": "bm://webmail-test.loc/users/B2CBEEFD-147C-451A-9229-1B6C9697D202",
            "internal": true,
            "lang": null,
            "mailto": "test@webmail-test.loc",
            "member": null,
            "partStatus": "NeedsAction",
            "responseComment": null,
            "role": "RequiredParticipant",
            "rsvp": true,
            "sentBy": null,
            "uri": null,
          },
        ],
        "categories": Array [],
        "classification": "Public",
        "description": null,
        "draft": false,
        "dtend": Object {
          "iso8601": "2020-08-19T09:30:00.000+02:00",
          "precision": "DateTime",
          "timezone": "Europe/Paris",
        },
        "dtstart": Object {
          "iso8601": "2020-08-19T09:00:00.000+02:00",
          "precision": "DateTime",
          "timezone": "Europe/Paris",
        },
        "exdate": null,
        "location": null,
        "organizer": Object {
          "commonName": "john doe",
          "dir": "bm://webmail-test.loc/users/6926E3AD-6CA1-4147-875F-85F080E64AFA",
          "mailto": "jdoe@webmail-test.loc",
          "uri": null,
        },
        "priority": 5,
        "rdate": null,
        "rrule": Object {
          "byDay": Array [],
          "byHour": Array [],
          "byMinute": Array [],
          "byMonth": Array [],
          "byMonthDay": Array [],
          "bySecond": Array [],
          "byWeekNo": Array [],
          "byYearDay": Array [],
          "count": null,
          "frequency": "MONTHLY",
          "interval": 2,
          "until": null,
        },
        "sequence": 0,
        "status": "Confirmed",
        "summary": "twice a month, with an hour",
        "transparency": "Opaque",
        "url": null,
      },
      "occurrences": Array [],
      "properties": Object {},
    },
    "version": 30,
  },
  "status": "NeedsAction",
  "summary": "twice a month, with an hour",
  "uid": "41a4e2e2-8eef-449c-9631-812727514880",
}
`;
